# ART

./: AUTHORS.txt  AboutThisBuild.txt.in  CMakeLists.txt  Dockerfile  LICENSE.txt  ProcessorTargets.cmake  README.md  RELEASE_NOTES.txt  TODO.txt  UpdateInfo.cmake  win.cmake
.github/workflows/: main.yml
doc/manpage/: ART.1
rtdata/: ART.desktop.in  CMakeLists.txt  cammatrices.json  dcraw.json  dynamicprofile.cfg  rt.json  wbpresets.json
rtdata/dcpprofiles/: CANON EOS 90D.dcp  CANON EOS RP.dcp  CANON EOS-1D X MARK III.dcp  Canon EOS 6D.dcp  FUJIFILM X-A5.dcp  FUJIFILM X-T2.dcp  FUJIFILM X-T20.dcp  FUJIFILM X-T30.dcp  FUJIFILM X-T4.dcp  NIKON D300.dcp  NIKON D700.dcp  NIKON D7200.dcp  NIKON D750.dcp  NIKON D7500.dcp  NIKON D810.dcp  Nikon D7000.dcp  PANASONIC DC-S5.dcp  PENTAX K-5 II.dcp  PENTAX K-50.dcp  SONY ILCE-6000.dcp  SONY ILCE-6500.dcp  SONY ILCE-7M2.dcp  SONY ILCE-7M3.dcp  camera_model_aliases.json
rtdata/iccprofiles/output/: RTv2_Medium.icc  RTv2_sRGB.icc  RTv4_ACES-AP0.icc  RTv4_Large.icc  RTv4_Linear_Rec2020.icc  RTv4_Medium.icc  RTv4_Rec2020.icc  RTv4_Rec2100_PQ.icc  RTv4_sRGB.icc
rtdata/images/: rawtherapee_ico.xcf
rtdata/languages/: Catala  Chinese (Simplified)  Czech  Deutsch  English (UK)  English (US)  Espanol  Francais  Italiano  Japanese  Korean  Magyar  Nederlands  Polish  Portugues (Brasil)  Russian  Serbian (Cyrilic Characters)  Swedish  default
rtdata/luts/: sigmoid.ctl
rtdata/profiles/: Auto-Matched Curve.arp  Noise Reduction High.arp  Sharpening.arp  Simple Film Curve.arp  Standard Film Curve.arp  Unclipped.arp
rtdata/themes/: Default-GTK3-_19.css  RawTherapee-GTK3-20_-DEPRECATED.css  RawTherapee-GTK3-_19-DEPRECATED.css  RawTherapee-GTK3-_19.css  TooWaBlue - Bright-GTK3-20_-DEPRECATED.css  TooWaBlue - Dark-GTK3-20_-DEPRECATED.css  TooWaBlue-GTK3-20_-DEPRECATED.css  TooWaGrey - Average Surround-GTK3-20_-DEPRECATED.css  TooWaGrey - Bright-GTK3-20_-DEPRECATED.css  TooWaGrey - Dark-GTK3-20_-DEPRECATED.css  TooWaGrey-GTK3-20_-DEPRECATED.css  _ART.css
rtengine/: CA_correct_RT.cc  CMakeLists.txt  EdgePreservingDecomposition.cc  FTblockDN.cc  LUT.h  LUT3D.cc  LUT3D.h  PF_correct_RT.cc  StopWatch.h  alignedbuffer.h  alpha.h  amaze_demosaic_RT.cc  array2D.h  ashift_dt.c  badpixels.cc  base64.cc  base64.h  bayer_bilinear_demosaic.cc  boxblur.h  camconst.cc  camconst.h  camconst.json  canon_cr3_decoder.cc  ciecam02.cc  clutparams.h  clutstore.cc  clutstore.h  clutstore.hpp  color.cc  color.h  colortemp.cc  colortemp.h  compress.cc  compress.h  coord.cc  coord.h  cplx_wavelet_dec.cc  cplx_wavelet_dec.h  cplx_wavelet_level.h  curves.cc  (+159 more)
rtexif/: nikonattribs.cc
rtgui/: CMakeLists.txt  addsetids.h  adjuster.cc  adjuster.h  areamask.cc  areamask.h  batchqueue.cc  batchqueue.h  batchqueueentry.cc  batchqueueentry.h  batchqueuepanel.cc  batchqueuepanel.h  batchtoolpanelcoord.cc  bayerpreprocess.cc  bayerpreprocess.h  bayerprocess.cc  bayerprocess.h  bayerrawexposure.cc  bayerrawexposure.h  blackwhite.cc  blackwhite.h  bqentryupdater.cc  bqentryupdater.h  brightcontrsat.cc  brightcontrsat.h  cacheimagedata.cc  cacheimagedata.h  cachemanager.cc  cachemanager.h  cacorrection.cc  cacorrection.h  checkbox.cc  checkbox.h  chmixer.cc  chmixer.h  clipboard.cc  clipboard.h  clutparamspanel.cc  clutparamspanel.h  coarsepanel.cc  (+275 more)
tools/: build-art  clean_translations.py  convert_darktable_wbpresets.py  extract_wb.py  generateReleaseInfo  generateSourceTarball  import_dartkable_wb_presets.cc  update_camconst.py  update_wb_presets.py
tools/gimp-plugin/: file-formats.h
tools/linux/: bundle_ART.py
tools/osx/: INSTALL.txt  Info.plist-bin.in  Info.plist.in  art.entitlements  art.icns  artdmg.icns  executable_loader.in  info-plist.cmake  macosx_bundle.sh  profile.icns
tools/win/: bundle_ART.py  imageio_driver.py  imageio_driver_pyinstaller.py
tools/win/InnoSetup/: WindowsInnoSetup.iss.in
